# bpsr_labs

./: .gitignore  .gitmodules  KICKOFF.md  LICENSE  PRECODEX_REPORT.json  PRECODEX_REPORT.md  README.md  REPORT.json  REPORT.md  pyproject.toml
.cursor/commands/: doc-parity.md
.local/: dev_diary.md
.local/docs/: todo_comment_standards.md
bpsr_labs/: __init__.py  cli.py
bpsr_labs/packet_decoder/cli/: bpsr_decode_combat.py  bpsr_decode_trade.py  bpsr_dps_reduce.py
bpsr_labs/packet_decoder/decoder/: __init__.py  combat_decode.py  combat_decode_v2.py  framing.py  item_catalog.py  trading_center_decode_v2.py
bundle/schema/: descriptor_blueprotobuf.pb
data/game-data/: .gitkeep  item_name_map.json
data/schemas/: combat_method_map.json
data/schemas/bundle/schema/: bluecombat.proto
docs/: commands.md  examples.md  packet-analysis.md  poe-task-guidelines.md  protobuf-integration-guide.md  setup.md
docs/guides/: packet-analysis.md
examples/advanced-analysis/: trading_listing_example.json
examples/basic-usage/: README.md
py/: requirements.txt
py/cli/: bpsr_decode_combat.py  bpsr_dps_reduce.py
py/decoder/: combat_reduce.py  framing.py
runs/python/: decoded_combat.jsonl  decoded_combat_stats.json  dps_summary.json
scripts/: generate_protos.py
src/bpsr_labs/: cli.py
src/bpsr_labs/packet_decoder/cli/: bpsr_update_items.py
src/bpsr_labs/packet_decoder/decoder/: combat_decode.py  combat_reduce.py  framing.py  item_catalog.py  trading_center_decode.py  update_item_mapping.py
tests/: conftest.py
tests/integration/: __init__.py  test_full_workflow.py
tests/unit/: __init__.py  test_combat_decode.py  test_combat_reduce.py  test_item_catalog.py  test_trading_center_decode.py
tools/packet_decoder/py/decoder/: combat_decode.py
