[project]
name = "bpsr-labs"
version = "0.1.0"
description = "Blue Protocol Star Resonance - Research Tools and Utilities"
authors = [
    {name = "Jordie", email = "jordie.r.belle@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["blue-protocol", "star-resonance", "packet-analysis", "game-research", "bpsr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

dependencies = [
    "protobuf>=6.33.0,<7.0.0",
    "zstandard>=0.25.0,<0.26.0", 
    "rich>=14.2.0,<15.0.0",
    "pydivert>=2.1.0,<3.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
gui = [
    "customtkinter>=5.0.0",
    "Pillow>=10.0.0",
]
analysis = [
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "plotly>=5.0.0",
    "dash>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/JordieB/bpsr-labs"
Documentation = "https://github.com/JordieB/bpsr-labs/tree/main/docs"
Repository = "https://github.com/JordieB/bpsr-labs.git"
Issues = "https://github.com/JordieB/bpsr-labs/issues"

[project.scripts]
bpsr-decode = "tools.packet_decoder.cli.bpsr_decode_combat:main"
bpsr-dps = "tools.packet_decoder.cli.bpsr_dps_reduce:main"
bpsr-labs = "bpsr_labs.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]