[project]
name = "bpsr-labs"
version = "0.1.0"
description = "Blue Protocol Star Resonance - Research Tools and Utilities"
authors = [
    {name = "Jordie", email = "jordie.r.belle@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = ["packet-analysis", "reverse-engineering", "bpsr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

dependencies = [
    "protobuf>=6.33.0,<7.0.0",
    "zstandard>=0.25.0,<0.26.0",
    "rich>=14.2.0,<15.0.0",
    "pydivert>=2.1.0,<3.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "bbpb>=1.4.0,<2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
isort = ">=5.12.0"
mypy = ">=1.0.0"
pre-commit = ">=3.0.0"
poethepoet = ">=0.25.0"
safety = ">=3.6.2"
grpcio-tools = ">=1.76.0"
ruff = ">=0.1.0"

[tool.poetry.group.gui.dependencies]
customtkinter = ">=5.0.0"
Pillow = ">=10.0.0"

[tool.poetry.group.analysis.dependencies]
jupyter = ">=1.0.0"
notebook = ">=6.5.0"
plotly = ">=5.0.0"
dash = ">=2.0.0"

[project.urls]
Homepage = "https://github.com/JordieB/bpsr-labs"
Documentation = "https://github.com/JordieB/bpsr-labs/tree/main/docs"
Repository = "https://github.com/JordieB/bpsr-labs.git"
Issues = "https://github.com/JordieB/bpsr-labs/issues"

[project.scripts]
bpsr-labs = "bpsr_labs.cli:main"
bpsr-decode = "bpsr_labs.cli:decode"
bpsr-dps = "bpsr_labs.cli:dps"
bpsr-trade-decode = "bpsr_labs.cli:trade_decode"
bpsr-update-items = "bpsr_labs.cli:update_items"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "bpsr_labs", from = "src"}]

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.poe.tasks]
# Setup tasks
init-submodules = { cmd = "git submodule update --init --recursive", help = "Initialize StarResonanceData submodule" }
generate-protos = { shell = "poetry run python scripts/generate_protos.py", help = "Generate protobuf modules from StarResonanceData" }
clean-protos = { shell = "poetry run python scripts/generate_protos.py --clean", help = "Clean and regenerate protobuf modules" }
install = { cmd = "poetry install --with dev", help = "Install dependencies including dev tools" }
update-items = { script = "bpsr_labs.cli:update_items", help = "Update item name mappings" }
setup = { sequence = ["init-submodules", "generate-protos", "install", "update-items"], help = "Complete project setup (run this first!)" }

# Testing tasks
test = { cmd = "pytest tests/", help = "Run all tests" }
test-unit = { cmd = "pytest tests/unit/", help = "Run unit tests only" }
test-integration = { cmd = "pytest tests/integration/", help = "Run integration tests only" }
test-cov = { cmd = "pytest --cov=bpsr_labs --cov-report=html --cov-report=term", help = "Run tests with coverage" }

# Code quality tasks
format = { sequence = ["_format-black", "_format-isort"], help = "Format code with black and isort" }
_format-black = { cmd = "black src/ tests/ scripts/" }
_format-isort = { cmd = "isort src/ tests/ scripts/" }
lint = { cmd = "ruff check src/ tests/ scripts/", help = "Lint code with ruff" }
typecheck = { cmd = "mypy src/", help = "Type check with mypy" }
check = { sequence = ["format", "lint", "typecheck", "test"], help = "Run all quality checks" }

# Development tasks
decode = { script = "bpsr_labs.cli:decode", help = "Decode combat packets (alias)" }
dps = { script = "bpsr_labs.cli:dps", help = "Calculate DPS metrics (alias)" }
trade-decode = { script = "bpsr_labs.cli:trade_decode", help = "Decode trading center packets (alias)" }

# Cleanup tasks
clean = { sequence = ["clean-protos", "_clean-pyc", "_clean-test"], help = "Clean all generated files" }
_clean-pyc = { cmd = "python -c \"import pathlib; [p.unlink() for p in pathlib.Path('.').rglob('*.py[co]')]; [p.rmdir() for p in pathlib.Path('.').rglob('__pycache__')]\"", help = "Remove Python cache files" }
_clean-test = { cmd = "python -c \"import shutil; import pathlib; [shutil.rmtree(p) for p in [pathlib.Path('.pytest_cache'), pathlib.Path('htmlcov'), pathlib.Path('.coverage')] if p.exists()]\"", help = "Remove test artifacts" }
